Clean header / notes / marketing link

--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
 
-<!-- Mirrored from www.allakabor.com/eqatlas/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 18 Oct 2014 04:10:13 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <title>EQ Atlas</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <style type="text/css">
 <!--
 -->
@@ -32,18 +30,12 @@
   </tr>
 </table>
 <table width=95% border="0" cellpadding="0" cellspacing="5" align="center">
-  <tr> 
-  <tr> 
-    <td valign="top" colspan="3"> <a href="index.html"><img src="images/logo.gif" width="301" height="104" vspace="10" alt="EQ Atlas" align="left" border="0"></a> 
-      <div align="right"><a href="http://store6.esellerate.net/store/s.aspx?s=STR183078619&amp;Cmd=BUY&amp;SKURefnum=SKU7365213309"><img src="images/pdficon_large.png" width="32" height="32" border="0"><br>
-Get Muse's<br>
-Maps PDF</a> </div></td>
+  <tr>
+  <tr>
+    <td valign="top" colspan="3"> <a href="index.html"><img src="images/logo.gif" width="301" height="104" vspace="10" alt="EQ Atlas" align="left" border="0"></a></div></td>
   </tr>
   <tr valign="top"> 
-    <td colspan="3"> 
-      <div align=center>
-        EQAtlas.com mirror provided by <a href="http://www.allakabor.com/">Alla'Kabor</a>.<br />See the <a href="#notes">notes</a> below.
-      </div><br />
+    <td colspan="3">
       <center>
         <a href="#antonica">Antonica</a> | <a href="#faydwer">Faydwer</a> | <a href="#odus">Odus</a> 
         | <a href="#kunark">Kunark</a> | <a href="#velious">Velious</a> | <a href="#luclin">Luclin</a> 
@@ -362,34 +354,10 @@ Maps PDF</a> </div></td>
 <br /><br /><hr><br /><br />
 <h1><a name=notes>Notes</a></h1>
 <br />
-<h2>History of EQAtlas</h2>
-<br />
-Muse, the creator of the original EQAtlas.com and author of all the maps, stopped creating maps for the site during the Planes of Power era (his last map being the Plane of Knowledge). Eclipsed by the in-game cartography system introduced in the Legacy of Ykesha expansion, the atlas slowly faded out of use as the years progressed. Muse continued to provide minimal updates to the site, including posting of several in-game maps upon user request. The last time he updated the site was in Feburary of 2005.
+<br />View Source: <a href="https://github.com/race/eqatlas" target="_blank">https://github.com/race/eqatlas</a>
+<br />Original mirror from: <a href="https://github.com/ebabel-eu/eqatlas" target="_blank">https://github.com/ebabel-eu/eqatlas</a>
 <br /><br />
-Sometime in the autumn of 2009, some internal coding for the advertisements on the site seemed to break. Every page began to display unsightly code-related output and it appeared that the site was on its last legs. Unfortunately, this was true, as the site went down in full sometime in early November.
-<br /><br />
-While the info on the EQAtlas may be inferior to what is present on sites like Allakhazams (and the maps no longer used by the average EverQuest player), the site held special significance for all of the players on Al'Kabor, the Macinosh EverQuest server. With expansions only up to Planes of Power, the Al'Kabor server is unique in the fact that it does not have an in-game mapping system at all; many of the players heavily rely on the these now-ancient maps for day-to-day navigation. Thus, the final death of the site was a big loss to many.
-<br /><br />
-Myself and others on the server have been interested in providing a mirror for the atlas for some time now. Multiple attempts were made to contact Muse, but he seems to have stopped checking that particular e-mail address years ago. Luckily, Biertrinker of EQMac.com saved a copy of the site during the months prior to its death. After laboring to clean up all of the advertisement code out of all of the pages, he sent everything to me so that I could provide a mirror of the site here. In the absence of the original site, this mirror will remain online for free for any to use. If this site helps you in your Norrathian travels, please remember to give your thanks to Biertrinker!
-<br /><br />
-Years ago, Muse created a PDF version of the site and posted it for sale. That way, ambitious users could print out all of the maps and have them handy when they were already in-game. The store, hosted at esellerate.net, still appears to be working at the time of this writing (November 24th, 2009). Presumably, all of the profits from this store would still go to Muse, wherever he is. The link to the store is at the top right-hand corner of the page; if you enjoy the atlas, consider purchasing the PDFs as a means of helping out the original author.
-<br /><br />
-<h2>Changes from the Original</h2>
-<br />
-I made a few minor changes from the original, as follows:
-<br /><br />
-<li>Fixed the "Get Muse's Maps PDF" link to the correct location.
-<li>Removed the Kunark/Velious/Luclin/Planes subdirectories and changed the links accordingly.
-<li>All of the advertisment code is removed (props to Biertrinker for this).
-<li>The links to the Korean/Chinese versions are taken out.
-<li>The link to the cartography maps is taken out.
-<li>All Ykesha zones (and the links to them) have been removed, since that expansion doesn't exist on Al'Kabor.
-<li>The contact info for Muse at the bottom of the main page has been removed, although it remains for every individual zone page.
-<li>Reverted the Gukta page back to the Grobb page (which I found at the <a href="http://www.archive.org/index.php">Internet Archive</a>) and updated the main page accordingly. It appears that Muse never created a new map for Gukta, only a new legend, which is lucky because I can't retrieve any map files from the archive. =)
-<li>Added maps for every zone that was missing from various other sites on the internet, mostly <a href="http://www.graffe.com/graffe1.0/">Graffe's Wizard Compilation</a>, <a href="http://eq.stratics.com/content/maps/">EQStratics.com</a>, <a href="http://eq.jeuxonline.info/guides/bestiaire/zones.php?loc=Antonica">JeuxOnLine</a>, and <a href="http://metabrain.tripod.com/700maps.htm">EQ as told by Dagon</a>.
-
-<br /><br />
-- Zamiel
+- Sacraxiles @ P99
 <br /><br /><br /><br />
 </font>
 	
@@ -398,5 +366,4 @@ I made a few minor changes from the original, as follows:
 </table>
 </body>
 
-<!-- Mirrored from www.allakabor.com/eqatlas/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 18 Oct 2014 04:10:13 GMT -->
 </html>
