Update copyright notice, add link to the Issue Management tracker

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     </td>
   </tr>
 </table>
-<p align="center">all contents Copyright 1999-2003 EQ Atlas Web Site</p>
+<p align="center">Copyright 1999-2003 EQAtlas</p>
 
 <table cellspacing=1 border=0 width=90% align="center">
   <tr>
@@ -356,6 +356,8 @@
 <br />
 <br />View Source: <a href="https://github.com/race/eqatlas" target="_blank">https://github.com/race/eqatlas</a>
 <br />Original mirror from: <a href="https://github.com/ebabel-eu/eqatlas" target="_blank">https://github.com/ebabel-eu/eqatlas</a>
+<br /><br />
+<br />Issue Management: <a href="https://waffle.io/race/eqatlas" target="_blank">https://waffle.io/race/eqatlas</a>
 <br /><br />
 - Sacraxiles @ P99
 <br /><br /><br /><br />
