--- a/classic.html
+++ b/classic.html
@@ -3,18 +3,15 @@
 <head>
 <title>EQ Atlas</title>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-<style type="text/css">
-  .top-menu {
-    text-align: center;
-    padding-top: 20px;
-  }
-  .content-list td {
-    padding: 10px;
-  }
-  .sub-th td {
-    border: none;
-  }
-</style>
+  <style type="text/css">
+    .top-menu {
+      text-align: center;
+      padding-top: 20px;
+    }
+    .content-list td {
+      padding: 10px;
+    }
+  </style>
 <meta name="description" content="Site with maps and guides to travelling the world of Everquest by Sony and Verant Interactive.">
 <meta name="keywords" content="everquest, maps, atlas, travel guide, monsters, NPC, character, travel, everquest, map, atlas, news, links, guide, eq, atlas">
 <link rel="icon" 
@@ -45,11 +42,11 @@
   <tr valign="top"> 
     <td colspan="3">
       <div class="top-menu">
-        <span>Home</span> | <a href="/classic.html">Classic View</a>
+        <a href="/">Home</a> | <span>Classic View</span>
       </div>
       <div class="top-menu">
-        <a href="#antonica">Antonica</a> | <a href="#faydwer">Faydwer</a> | <a href="#odus">Odus</a> 
-        | <a href="#kunark">Kunark</a> | <a href="#velious">Velious</a> | <a href="#luclin">Luclin</a> 
+        <a href="#antonica">Antonica</a> | <a href="#faydwer">Faydwer</a> | <a href="#odus">Odus</a>
+        | <a href="#kunark">Kunark</a> | <a href="#velious">Velious</a> | <a href="#luclin">Luclin</a>
         | <a href="#planes">Planes</a><br><br>
       </div>
 
@@ -57,8 +54,8 @@
         <tr> 
           <th align=center colspan="4"><b><font color="#000000"><a name="antonica">ANTONICA</a></font></b></th>
         </tr>
-        <tr class="content-list">
-          <td align=center colspan="2" width=45%>
+        <tr> 
+          <td align=center colspan="2" width=45%> 
             <p><b>Zone Connection Maps </b></p>
             <p><a href="eantonicamap.html"><font size="-1">East Antonica</font></a><font size="-1"><br>
               <a href="santonicamap.html">South Antonica</a><br>
@@ -78,12 +75,12 @@
               <a href="surefallglade.html">Surefall Glade</a> </font></p>
           </td>
         </tr>
-        <tr class="sub-th">
+        <tr> 
           <td align=center colspan=4> 
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2><font size="-1"><a href="arena.html">The Arena</a><br>
             <a href="befallen.html">Befallen</a><br>
             <a href="blackburrow.html">Blackburrow</a><br>
@@ -101,11 +98,9 @@
             <a href="lakerathetear.html">Lake Rathetear<br>
             </a><a href="lavastorm.html">Lavastorm Mountains</a><br>
             <a href="lowerguk.html">Lower Guk</a><br>
-            <a href="mistythicket.html">Misty Thicket</a></font><br>
-          </td>
-          <td align=center colspan=2><font size="-1">
-            <a href="nagafenslair.html">Nagafen's Lair</a> (a.k.a. Sol B)<br>
-		        <a href="najena.html">Najena</a><br>
+            <a href="mistythicket.html">Misty Thicket</a></font><br></td>
+          <td align=center colspan=2><font size="-1"><a href="nagafenslair.html">Nagafen's Lair</a> (a.k.a. Sol B)<br>
+		    <a href="najena.html">Najena</a><br>
             <a href="nektulosforest.html">Nektulos Forest</a><br>
             <a href="northro.html">Northern Desert of Ro</a><br>
             <a href="northernkarana.html">Northern Plains of Karana</a><br>
@@ -121,14 +116,13 @@
             <a href="templesro.html">Temple of Solusek Ro</a> <br>
             <a href="upperguk.html">Upper Guk</a><br>
             <a href="westcommons.html">West Commonlands<br></a>
-            <a href="westernkarana.html">Western Plains of Karana</a> </font>
-          </td>
+            <a href="westernkarana.html">Western Plains of Karana</a> </font></td>
         </tr>
         <tr> 
           <th align=center colspan="2"><font color="#000000"><a name="odus">ODUS</a></font></th>
           <th align=center colspan=2><font color="#000000"><a name="faydwer">FAYDWER</a></font></th>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center height="72"> 
             <p><b>Zone Connection Map</b></p>
             <p><a href="odusmap.html"><font size="-1">Odus</font></a> </p>
@@ -150,13 +144,9 @@
               <a href="akanon.html">Ak'Anon</a></font></p>
           </td>
         </tr>
-        <tr class="sub-th">
-          <td align="center" colspan="4">
+        <tr> 
+          <td align=center height="72" valign="top" colspan="2"> 
             <p><b>Zones</b></p>
-          </td>
-        </tr>
-        <tr class="content-list">
-          <td align=center height="72" valign="top" colspan="2">
             <p><a href="erudscrossing.html"><font size="-1">Erud's Crossing</font></a> 
               <font size="-1"><br>
               <a href="kerraisle.html">Kerra Island</a><br>
@@ -167,6 +157,7 @@
               </a> </font></p>
           </td>
           <td align=center height="72" valign="top" colspan="2"> 
+            <p><b>Zones</b></p>
             <p><a href="butcherblock.html"><font size="-1">Butcherblock Mountains</font></a><font size="-1"><br>
               <a href="mistmoore.html">Castle Mistmoore</a><br>
               <a href="crushbone.html">Crushbone</a><br>
@@ -182,7 +173,7 @@
         <tr> 
           <th align=center colspan="4"><b><font color="#000000"><a name="kunark">KUNARK</a></font></b></th>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan="2"> 
             <p><b>Zone Connection Maps </b></p>
             <p><font size="-1"><a href="kunarkzones.html">Kunark</a></font></p>
@@ -192,12 +183,12 @@
             <p><font size="-1"><a href="cabilis.html">Cabilis</a></font></p>
           </td>
         </tr>
-        <tr class="sub-th">
+        <tr> 
           <td align=center colspan=4> 
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2> 
             <p><font size="-1"><a href="burningwood.html">Burning Wood</a> 
               <br>
@@ -230,7 +221,7 @@
         <tr> 
           <th align=center colspan="4"><b><font color="#000000"><a name="velious">VELIOUS</a></font></b></th>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan="2"> 
             <p><b>Zone Connection Maps </b></p>
             <p><font size="-1"><a href="veliousmap.html">Velious</a></font></p>
@@ -243,12 +234,12 @@
               <a href="thurgadin.html">Thurgadin</a></font></p>
           </td>
         </tr>
-        <tr class="sub-th">
+        <tr> 
           <td align=center colspan=4> 
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2> 
             <p><font size="-1"><a href="cobaltscar.html">Cobalt Scar</a> 
               <br>
@@ -269,7 +260,7 @@
         <tr> 
           <th align=center colspan="4"><b><font color="#000000"><a name="luclin">LUCLIN</a></font></b></th>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan="2"> 
             <p><b>Zone Connection Maps </b></p>
             <p><font size="-1"><a href="luclinzones.html">Luclin</a></font></p>
@@ -284,12 +275,12 @@
               <a href="sharvahl.html">Shar Vahl</a></font></p>
           </td>
         </tr>
-        <tr class="sub-th">
+        <tr> 
           <td align=center colspan=4> 
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2> 
             <p><font size="-1"><a href="acryliacaverns.html">Acrylia Caverns</a><br>
               <a href="akhevaruins.html">Akheva Ruins</a><br>
@@ -319,7 +310,7 @@
         <tr> 
           <td align=center colspan=4><b><a name="planes">PLANES</a></b></td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2> 
             <p><font size="-1"><a href="planeofskymap.html">Plane of Sky</a><br>
               <a href="planeoffearmap.html">Plane of Fear</a><br>
@@ -331,7 +322,7 @@
         <tr> 
           <td align=center colspan=4><b>PLANES OF POWER</b></td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2 valign="top"><font size="-1"><a href="bastionofthundermap.html">Bastion of Thunder</a><br>
             <a href="lairofterristhulemap.html">Crypt of Terris Thule</a> (a.k.a. Plane of Nightmare B)<br>
             <a href="burninglandsmap.html">Doomfire, the Burning Lands</a> (a.k.a. Plane of Fire)<br>
@@ -346,7 +337,7 @@
           </td>
           <td align=center colspan=2 valign="top"><font size="-1"><a href="planeofstormsmap.html">Plane of Storms</a><br>
             <a href="images/planeoftime.png">Plane of Time</a><br>
-			      <a href="images/planeoftimeb.png">Plane of Time B</a><br>
+			<a href="images/planeoftimeb.png">Plane of Time B</a><br>
             <a href="planeoftormentmap.html">Plane of Torment</a><br>
             <a href="images/planeoftranquility.gif">Plane of Tranquility</a><br>
             <a href="images/planeofvalor.gif">Plane of Valor</a><br>
@@ -355,7 +346,7 @@
             <a href="templeofmarrmap.html">Temple of Marr</a> (a.k.a. Halls of Honor B)<br>
             <a href="solusekrostowermap.html">Tower of Solusek Ro</a><br>
             <a href="images/planeofearth.gif">Vegarlson the Earthen Badlands</a> (a.k.a. Plane of Earth)<br>
-			      <a href="images/planeofearthb.gif">Ragrax, Stronghold of the Twelve</a> (a.k.a. Plane of Earth B)</font></td>
+			<a href="images/planeofearthb.gif">Ragrax, Stronghold of the Twelve</a> (a.k.a. Plane of Earth B)</font></td>
         </tr>
       </table>
     </td>
