--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <html>
 
+<!-- Mirrored from www.allakabor.com/eqatlas/atlas.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 18 Oct 2014 04:08:59 GMT -->
+<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <title>EQ Atlas</title>
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
-  .top-menu {
-    text-align: center;
-    padding-top: 20px;
-  }
-  .content-list td {
-    padding: 10px;
-  }
-  .sub-th td {
-    border: none;
-  }
+<!--
+-->
 </style>
 <meta name="description" content="Site with maps and guides to travelling the world of Everquest by Sony and Verant Interactive.">
 <meta name="keywords" content="everquest, maps, atlas, travel guide, monsters, NPC, character, travel, everquest, map, atlas, news, links, guide, eq, atlas">
@@ -38,27 +32,30 @@
   </tr>
 </table>
 <table width=95% border="0" cellpadding="0" cellspacing="5" align="center">
-  <tr>
-  <tr>
-    <td valign="top" colspan="3"> <a href="index.html"><img src="images/logo.gif" width="301" height="104" vspace="10" alt="EQ Atlas" align="left" border="0"></a></div></td>
+  <tr> 
+  <tr> 
+    <td valign="top" colspan="3"> <a href="index.html"><img src="images/logo.gif" width="301" height="104" vspace="10" alt="EQ Atlas" align="left" border="0"></a> 
+      <div align="right"><a href="http://store6.esellerate.net/store/s.aspx?s=STR183078619&amp;Cmd=BUY&amp;SKURefnum=SKU7365213309"><img src="images/pdficon_large.png" width="32" height="32" border="0"><br>
+Get Muse's<br>
+Maps PDF</a> </div></td>
   </tr>
   <tr valign="top"> 
-    <td colspan="3">
-      <div class="top-menu">
-        <span>Home</span> | <a href="/classic.html">Classic View</a>
-      </div>
-      <div class="top-menu">
+    <td colspan="3"> 
+      <div align=center>
+        EQAtlas.com mirror provided by <a href="http://www.allakabor.com/">Alla'Kabor</a>.<br />See the <a href="#notes">notes</a> below.
+      </div><br />
+      <center>
         <a href="#antonica">Antonica</a> | <a href="#faydwer">Faydwer</a> | <a href="#odus">Odus</a> 
         | <a href="#kunark">Kunark</a> | <a href="#velious">Velious</a> | <a href="#luclin">Luclin</a> 
         | <a href="#planes">Planes</a><br><br>
-      </div>
+      </center>
 
       <table cellspacing=20 border="1" width=90% align="center">
         <tr> 
           <th align=center colspan="4"><b><font color="#000000"><a name="antonica">ANTONICA</a></font></b></th>
         </tr>
-        <tr class="content-list">
-          <td align=center colspan="2" width=45%>
+        <tr> 
+          <td align=center colspan="2" width=45%> 
             <p><b>Zone Connection Maps </b></p>
             <p><a href="eantonicamap.html"><font size="-1">East Antonica</font></a><font size="-1"><br>
               <a href="santonicamap.html">South Antonica</a><br>
@@ -78,12 +75,12 @@
               <a href="surefallglade.html">Surefall Glade</a> </font></p>
           </td>
         </tr>
-        <tr class="sub-th">
+        <tr> 
           <td align=center colspan=4> 
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2><font size="-1"><a href="arena.html">The Arena</a><br>
             <a href="befallen.html">Befallen</a><br>
             <a href="blackburrow.html">Blackburrow</a><br>
@@ -101,11 +98,9 @@
             <a href="lakerathetear.html">Lake Rathetear<br>
             </a><a href="lavastorm.html">Lavastorm Mountains</a><br>
             <a href="lowerguk.html">Lower Guk</a><br>
-            <a href="mistythicket.html">Misty Thicket</a></font><br>
-          </td>
-          <td align=center colspan=2><font size="-1">
-            <a href="nagafenslair.html">Nagafen's Lair</a> (a.k.a. Sol B)<br>
-		        <a href="najena.html">Najena</a><br>
+            <a href="mistythicket.html">Misty Thicket</a></font><br></td>
+          <td align=center colspan=2><font size="-1"><a href="nagafenslair.html">Nagafen's Lair</a> (a.k.a. Sol B)<br>
+		    <a href="najena.html">Najena</a><br>
             <a href="nektulosforest.html">Nektulos Forest</a><br>
             <a href="northro.html">Northern Desert of Ro</a><br>
             <a href="northernkarana.html">Northern Plains of Karana</a><br>
@@ -121,14 +116,13 @@
             <a href="templesro.html">Temple of Solusek Ro</a> <br>
             <a href="upperguk.html">Upper Guk</a><br>
             <a href="westcommons.html">West Commonlands<br></a>
-            <a href="westernkarana.html">Western Plains of Karana</a> </font>
-          </td>
+            <a href="westernkarana.html">Western Plains of Karana</a> </font></td>
         </tr>
         <tr> 
           <th align=center colspan="2"><font color="#000000"><a name="odus">ODUS</a></font></th>
           <th align=center colspan=2><font color="#000000"><a name="faydwer">FAYDWER</a></font></th>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center height="72"> 
             <p><b>Zone Connection Map</b></p>
             <p><a href="odusmap.html"><font size="-1">Odus</font></a> </p>
@@ -150,13 +144,9 @@
               <a href="akanon.html">Ak'Anon</a></font></p>
           </td>
         </tr>
-        <tr class="sub-th">
-          <td align="center" colspan="4">
+        <tr> 
+          <td align=center height="72" valign="top" colspan="2"> 
             <p><b>Zones</b></p>
-          </td>
-        </tr>
-        <tr class="content-list">
-          <td align=center height="72" valign="top" colspan="2">
             <p><a href="erudscrossing.html"><font size="-1">Erud's Crossing</font></a> 
               <font size="-1"><br>
               <a href="kerraisle.html">Kerra Island</a><br>
@@ -167,6 +157,7 @@
               </a> </font></p>
           </td>
           <td align=center height="72" valign="top" colspan="2"> 
+            <p><b>Zones</b></p>
             <p><a href="butcherblock.html"><font size="-1">Butcherblock Mountains</font></a><font size="-1"><br>
               <a href="mistmoore.html">Castle Mistmoore</a><br>
               <a href="crushbone.html">Crushbone</a><br>
@@ -182,7 +173,7 @@
         <tr> 
           <th align=center colspan="4"><b><font color="#000000"><a name="kunark">KUNARK</a></font></b></th>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan="2"> 
             <p><b>Zone Connection Maps </b></p>
             <p><font size="-1"><a href="kunarkzones.html">Kunark</a></font></p>
@@ -192,12 +183,12 @@
             <p><font size="-1"><a href="cabilis.html">Cabilis</a></font></p>
           </td>
         </tr>
-        <tr class="sub-th">
+        <tr> 
           <td align=center colspan=4> 
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2> 
             <p><font size="-1"><a href="burningwood.html">Burning Wood</a> 
               <br>
@@ -230,7 +221,7 @@
         <tr> 
           <th align=center colspan="4"><b><font color="#000000"><a name="velious">VELIOUS</a></font></b></th>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan="2"> 
             <p><b>Zone Connection Maps </b></p>
             <p><font size="-1"><a href="veliousmap.html">Velious</a></font></p>
@@ -243,12 +234,12 @@
               <a href="thurgadin.html">Thurgadin</a></font></p>
           </td>
         </tr>
-        <tr class="sub-th">
+        <tr> 
           <td align=center colspan=4> 
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2> 
             <p><font size="-1"><a href="cobaltscar.html">Cobalt Scar</a> 
               <br>
@@ -269,7 +260,7 @@
         <tr> 
           <th align=center colspan="4"><b><font color="#000000"><a name="luclin">LUCLIN</a></font></b></th>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan="2"> 
             <p><b>Zone Connection Maps </b></p>
             <p><font size="-1"><a href="luclinzones.html">Luclin</a></font></p>
@@ -284,12 +275,12 @@
               <a href="sharvahl.html">Shar Vahl</a></font></p>
           </td>
         </tr>
-        <tr class="sub-th">
+        <tr> 
           <td align=center colspan=4> 
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2> 
             <p><font size="-1"><a href="acryliacaverns.html">Acrylia Caverns</a><br>
               <a href="akhevaruins.html">Akheva Ruins</a><br>
@@ -319,7 +310,7 @@
         <tr> 
           <td align=center colspan=4><b><a name="planes">PLANES</a></b></td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2> 
             <p><font size="-1"><a href="planeofskymap.html">Plane of Sky</a><br>
               <a href="planeoffearmap.html">Plane of Fear</a><br>
@@ -331,7 +322,7 @@
         <tr> 
           <td align=center colspan=4><b>PLANES OF POWER</b></td>
         </tr>
-        <tr class="content-list">
+        <tr> 
           <td align=center colspan=2 valign="top"><font size="-1"><a href="bastionofthundermap.html">Bastion of Thunder</a><br>
             <a href="lairofterristhulemap.html">Crypt of Terris Thule</a> (a.k.a. Plane of Nightmare B)<br>
             <a href="burninglandsmap.html">Doomfire, the Burning Lands</a> (a.k.a. Plane of Fire)<br>
@@ -346,7 +337,7 @@
           </td>
           <td align=center colspan=2 valign="top"><font size="-1"><a href="planeofstormsmap.html">Plane of Storms</a><br>
             <a href="images/planeoftime.png">Plane of Time</a><br>
-			      <a href="images/planeoftimeb.png">Plane of Time B</a><br>
+			<a href="images/planeoftimeb.png">Plane of Time B</a><br>
             <a href="planeoftormentmap.html">Plane of Torment</a><br>
             <a href="images/planeoftranquility.gif">Plane of Tranquility</a><br>
             <a href="images/planeofvalor.gif">Plane of Valor</a><br>
@@ -355,13 +346,13 @@
             <a href="templeofmarrmap.html">Temple of Marr</a> (a.k.a. Halls of Honor B)<br>
             <a href="solusekrostowermap.html">Tower of Solusek Ro</a><br>
             <a href="images/planeofearth.gif">Vegarlson the Earthen Badlands</a> (a.k.a. Plane of Earth)<br>
-			      <a href="images/planeofearthb.gif">Ragrax, Stronghold of the Twelve</a> (a.k.a. Plane of Earth B)</font></td>
+			<a href="images/planeofearthb.gif">Ragrax, Stronghold of the Twelve</a> (a.k.a. Plane of Earth B)</font></td>
         </tr>
       </table>
     </td>
   </tr>
 </table>
-<p align="center">Copyright 1999-2003 EQAtlas</p>
+<p align="center">all contents Copyright 1999-2003 EQ Atlas Web Site</p>
 
 <table cellspacing=1 border=0 width=90% align="center">
   <tr>
@@ -371,29 +362,41 @@
 <br /><br /><hr><br /><br />
 <h1><a name=notes>Notes</a></h1>
 <br />
-<br />View Source: <a href="https://github.com/race/eqatlas" target="_blank">https://github.com/race/eqatlas</a>
-<br />Original mirror from: <a href="https://github.com/ebabel-eu/eqatlas" target="_blank">https://github.com/ebabel-eu/eqatlas</a>
+<h2>History of EQAtlas</h2>
+<br />
+Muse, the creator of the original EQAtlas.com and author of all the maps, stopped creating maps for the site during the Planes of Power era (his last map being the Plane of Knowledge). Eclipsed by the in-game cartography system introduced in the Legacy of Ykesha expansion, the atlas slowly faded out of use as the years progressed. Muse continued to provide minimal updates to the site, including posting of several in-game maps upon user request. The last time he updated the site was in Feburary of 2005.
 <br /><br />
-<br />Issue Management: <a href="https://waffle.io/race/eqatlas" target="_blank">https://waffle.io/race/eqatlas</a>
+Sometime in the autumn of 2009, some internal coding for the advertisements on the site seemed to break. Every page began to display unsightly code-related output and it appeared that the site was on its last legs. Unfortunately, this was true, as the site went down in full sometime in early November.
 <br /><br />
-- Sacraxiles @ P99
+While the info on the EQAtlas may be inferior to what is present on sites like Allakhazams (and the maps no longer used by the average EverQuest player), the site held special significance for all of the players on Al'Kabor, the Macinosh EverQuest server. With expansions only up to Planes of Power, the Al'Kabor server is unique in the fact that it does not have an in-game mapping system at all; many of the players heavily rely on the these now-ancient maps for day-to-day navigation. Thus, the final death of the site was a big loss to many.
+<br /><br />
+Myself and others on the server have been interested in providing a mirror for the atlas for some time now. Multiple attempts were made to contact Muse, but he seems to have stopped checking that particular e-mail address years ago. Luckily, Biertrinker of EQMac.com saved a copy of the site during the months prior to its death. After laboring to clean up all of the advertisement code out of all of the pages, he sent everything to me so that I could provide a mirror of the site here. In the absence of the original site, this mirror will remain online for free for any to use. If this site helps you in your Norrathian travels, please remember to give your thanks to Biertrinker!
+<br /><br />
+Years ago, Muse created a PDF version of the site and posted it for sale. That way, ambitious users could print out all of the maps and have them handy when they were already in-game. The store, hosted at esellerate.net, still appears to be working at the time of this writing (November 24th, 2009). Presumably, all of the profits from this store would still go to Muse, wherever he is. The link to the store is at the top right-hand corner of the page; if you enjoy the atlas, consider purchasing the PDFs as a means of helping out the original author.
+<br /><br />
+<h2>Changes from the Original</h2>
+<br />
+I made a few minor changes from the original, as follows:
+<br /><br />
+<li>Fixed the "Get Muse's Maps PDF" link to the correct location.
+<li>Removed the Kunark/Velious/Luclin/Planes subdirectories and changed the links accordingly.
+<li>All of the advertisment code is removed (props to Biertrinker for this).
+<li>The links to the Korean/Chinese versions are taken out.
+<li>The link to the cartography maps is taken out.
+<li>All Ykesha zones (and the links to them) have been removed, since that expansion doesn't exist on Al'Kabor.
+<li>The contact info for Muse at the bottom of the main page has been removed, although it remains for every individual zone page.
+<li>Reverted the Gukta page back to the Grobb page (which I found at the <a href="http://www.archive.org/index.php">Internet Archive</a>) and updated the main page accordingly. It appears that Muse never created a new map for Gukta, only a new legend, which is lucky because I can't retrieve any map files from the archive. =)
+<li>Added maps for every zone that was missing from various other sites on the internet, mostly <a href="http://www.graffe.com/graffe1.0/">Graffe's Wizard Compilation</a>, <a href="http://eq.stratics.com/content/maps/">EQStratics.com</a>, <a href="http://eq.jeuxonline.info/guides/bestiaire/zones.php?loc=Antonica">JeuxOnLine</a>, and <a href="http://metabrain.tripod.com/700maps.htm">EQ as told by Dagon</a>.
+
+<br /><br />
+- Zamiel
 <br /><br /><br /><br />
 </font>
 	
 	</td>
   </tr>
 </table>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-69460613-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </body>
 
+<!-- Mirrored from www.allakabor.com/eqatlas/atlas.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 18 Oct 2014 04:10:12 GMT -->
 </html>
