Fix issue #5 - altered meta descriptions on index and classic pages

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     }
   </style>
   <meta name="description"
-        content="Site with maps and guides to travelling the world of Everquest by Sony and Verant Interactive.">
+        content="EQ Atlas: Free digital maps and guides to travelling the world of EverQuest Classic.">
   <meta name="keywords"
-        content="everquest, maps, atlas, travel guide, monsters, NPC, character, travel, everquest, map, atlas, news, links, guide, eq, atlas">
+        content="everquest, maps, atlas, travel guide, monsters, NPC, character, news, links, guide, eq, project1999, mirror">
   <link rel="icon"
         type="image/png"
         href="favicon.ico">
