--- a/classic.html
+++ b/classic.html
@@ -12,8 +12,8 @@
       padding: 10px;
     }
   </style>
-<meta name="description" content="Site with maps and guides to travelling the world of Everquest by Sony and Verant Interactive.">
-<meta name="keywords" content="everquest, maps, atlas, travel guide, monsters, NPC, character, travel, everquest, map, atlas, news, links, guide, eq, atlas">
+<meta name="description" content="Classic view of EQAtlas: Free digital maps and guides to travelling the world of EverQuest Classic.">
+<meta name="keywords" content="everquest, maps, atlas, travel guide, monsters, NPC, character, news, links, guide, eq, project1999, mirror">
 <link rel="icon" 
       type="image/png" 
       href="favicon.ico">
