--- a/atlas.html
+++ b/atlas.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>EQ Atlas</title>
+<title>Classic EQ Atlas</title>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <style type="text/css">
     .top-menu {
