--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <tr valign="top">
       <td colspan="3">
         <div class="top-menu">
-          <span>Home</span> | <a href="/atlas.html">Classic View</a>
+          <span>Home</span> | <a href="/atlas.html">Classic Atlas</a>
         </div>
         <div class="top-menu">
           <a href="#antonica">Antonica</a> | <a href="#faydwer">Faydwer</a> | <a href="#odus">Odus</a>
