Update blog nov. 6 - eqatlas.ca now encrypted

--- a/index.html
+++ b/index.html
@@ -453,7 +453,12 @@
           <br/><br/>
 
           <h1><a name=notes>Notes</a></h1>
+          <h2>EQAtlas.ca is now fully encrypted!</h2>
+          <p class="date">Nov 6, 2015</p>
+          <p>At EQAtlas.ca we are proud to support initiatives that focus on internet freedom and safety - as a result we've enabled full encryption for our audience. Enjoy!</p>
+          <p>Our encryption certificates are provided by Let's Encrypt - for more information on this exciting initiatve, visit: <a href="https://letsencrypt.org/">letsencrypt.org</a></p>
           <br/>
+          <hr>
           <br/>View Source: <a href="https://github.com/race/eqatlas" target="_blank">https://github.com/race/eqatlas</a>
           <br/>Original mirror from: <a href="https://github.com/ebabel-eu/eqatlas" target="_blank">https://github.com/ebabel-eu/eqatlas</a>
           <br/><br/>
