Update copyright on index page

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
       </td>
     </tr>
   </table>
-  <p align="center">Copyright 1999-2003 EQAtlas</p>
+  <p align="center">Copyright 2015 EQAtlas.ca</p>
 
   <table cellspacing=1 border=0 width=90% align="center">
     <tr>
